# ai-open-textbook

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-CODE-MIT.md  LICENSE-CONTENT-CC-BY-4.0.md  MANIFEST.json  Makefile  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
curriculum/: highschool_information_i.curriculum.json
data/: README.md
docs/: ACCESSIBILITY_POLICY.md  AI_USAGE_POLICY.md  ANSWER_RUBRIC_VERSIONING.md  ATTRIBUTION.md  CONTENT_DEPTH_STANDARD.md  COPYRIGHT_POLICY.md  CURRICULUM_MAP.md  DATA_MODEL.md  EXPORT_INDEX_WORKFLOW.md  EXTERNAL_PROSE_TOOLING_ADOPTION.md  GIT_WORKFLOW.md  INFORMATION_I_COMPLETION_MATRIX.md  MVP_REVIEW_CHECKLIST.md  MVP_SCOPE.md  OPERATING_RULES.md  PROBLEM_BANK_DESIGN.md  PROCESS.md  PROSE_LINTING_EVALUATION.md  PROSE_WARNING_CHECKS.md  RELEASE_POLICY.md  REVIEW_GUIDE.md  STYLE_GUIDE.md  TOOLING_GATES.md  WRITING_QUALITY_POLICY.md  WRITING_QUALITY_POLICY_DRAFT.md
prompts/: fable-planner.md  japanese-educational-prose-cleanup.md  opus-reviewer.md  sonnet-lesson-writer.md
schemas/: answer.schema.json  curriculum.schema.json  lesson.schema.json  problem.schema.json  revision.schema.json  rubric.schema.json  source.schema.json
scripts/: audit_lesson_depth.py  build_pdf.py  build_sqlite_index.py  build_static_site.py  check_examples.py  check_integration_contract.py  check_prose_warnings.py  check_revision_history.py  export_manifest.py  validate_ndjson.py  verify_static_site.py
tests/: test_audit_lesson_depth.py  (+10 more)
(+140 files in other folders)
