[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-open-textbook-starter"
version = "0.1.0"
description = "Starter repository for AI-native open educational materials."
requires-python = ">=3.10"
license = { text = "MIT for code; CC BY 4.0 for content" }
dependencies = [
    "jsonschema>=4.26,<5",
    "markdown-it-py>=4.2,<5",
    "playwright>=1.60,<2",
    "pypdf>=6.10,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
]

[tool.project]
source_of_truth = "data/collections/*.ndjson"
generated_index = "build/index.sqlite"

[tool.setuptools]
packages = []
